--- a/client/partials/appointments.html
+++ b/client/partials/appointments.html
@@ -1,15 +1,15 @@
-<h1>Appointments</h1>
+<h1>Appointments Schedule</h1>
 
-<a href="/">Logout</a><br><br>
+<a href="/" class="logout">Logout</a><br><br>
 
 <input type='text' placeholder='Search' ng-model='filter_appointment'><br><br>
 
-<table border='1 px'>
+<table>
 	<tr>
 		<th>Date</th>
 		<th>Time</th>
-		<th>Patient Name</th>
-		<th>Complaint</th>
+		<th>Name</th>
+		<th>Issue</th>
 		<th>Cancel Appointment</th>
 	</tr>
 	<tr ng-repeat='appointment in appointmentsCtrl.appointments | filter:filter_appointment | orderBy: "date"'>
@@ -17,9 +17,9 @@
 		<td><span ng-bind='appointment.time'></span></td>
 		<td><span ng-bind='appointment.name'></span></td>
 		<td><span ng-bind='appointment.complaint'></span></td>
-		<td><button ng-click='appointmentsCtrl.removeAppt(appointment._id, appointment.name, appointment.date)'>Cancel</button></td>
+		<td><button ng-click='appointmentsCtrl.removeAppt(appointment._id, appointment.name, appointment.date)' class="button">Cancel</button></td>
 	</tr>
 
 </table><br><br>
 
-<button><a href="#/new">Add New Appointment</a></button>
+<button><a href="#/new" class="button">Add New Appointment</a></button>
